--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gekipawa-frontend",
+  "name": "baseball-game-frontend",
   "version": "1.0.0",
   "private": true,
   "packageManager": "pnpm@8.10.0",
