--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,15 +19,16 @@ services:
       - db
       - redis
 
-  nginx:
-    image: nginx:alpine
-    container_name: baseball-game_nginx
+  apache:
+    build:
+      context: ./apache
+      dockerfile: Dockerfile
+    container_name: baseball-game_apache
     restart: unless-stopped
     ports:
       - "8080:80"
     volumes:
       - ./backend/public:/var/www/public
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
       - baseball-game-network
     depends_on:
