--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,37 +4,32 @@
   "private": true,
   "packageManager": "pnpm@8.10.0",
   "dependencies": {
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.5.2",
-    "@types/node": "16.18.68",
-    "@types/react": "18.2.42",
-    "@types/react-dom": "18.2.17",
     "axios": "1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router": "7.0.0",
-    "autoprefixer": "10.4.16",
-    "postcss": "8.4.32",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "3.3.6",
-    "typescript": "4.9.5",
-    "web-vitals": "2.1.4"
+    "react-router": "7.0.0"
   },
   "devDependencies": {
+    "@types/node": "20.14.0",
+    "@types/react": "18.2.42",
+    "@types/react-dom": "18.2.17",
+    "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "10.4.16",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.1.3",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
-    "prettier": "3.2.5"
+    "postcss": "8.4.32",
+    "prettier": "3.2.5",
+    "tailwindcss": "3.3.6",
+    "typescript": "5.4.5",
+    "vite": "5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,css}\"",
@@ -56,18 +51,5 @@
       "react-app",
       "react-app/jest"
     ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
