--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "axios": "1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router": "7.0.0"
+    "react-router": "7.0.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "20.14.0",
